--- a/src/pages/explore/explore.scss
+++ b/src/pages/explore/explore.scss
@@ -22,6 +22,12 @@
                 top: 0vh;
                 left: 0vh;
                 z-index: 7;
+
+                .close{
+                    background-color: transparent;
+                    color: white;
+                    border: none;
+                }
     
                 .viewContent{
                     height: 80vh;
@@ -35,6 +41,35 @@
                     overflow-y: scroll;
                     display: flex;
                     flex-direction: column;
+
+                    .Alert{
+                        p{
+                            width: 100%;
+                            text-align: center;
+                            font-size: 13px;
+                        }
+                        img{
+                            width: 70%;
+                            margin-left: 15%;
+                            margin-top: 20%;
+                            margin-bottom: 50%;
+                        }
+                        .btns{
+                            button{
+                                background-color: #08A318;
+                                border: none;
+                                color: white;
+                                padding: 4%;
+                                font-size: 3vh;
+                                width:40%;
+                                margin-left: 6.5%;
+                                border-radius: 10px;
+                                cursor: pointer;
+                                margin-bottom: 5vh;
+                                margin-top: 5vh;
+                            }
+                        }
+                    }
     
                     .map{
                         width: 80%;
@@ -82,20 +117,20 @@
                         }
                     }
     
-                    .btn{
-                        background-color: #08A318;
-                        border: none;
-                        color: white;
-                        padding: 4%;
-                        font-size: 3vh;
-                        width:60%;
-                        margin-left: 20%;
-                        border-radius: 10px;
-                        cursor: pointer;
-                        margin-bottom: 5vh;
-                        margin-top: 5vh;
-    
-    
+                    .btns{
+                        button{
+                            background-color: #08A318;
+                            border: none;
+                            color: white;
+                            padding: 4%;
+                            font-size: 3vh;
+                            width:40%;
+                            margin-left: 6.5%;
+                            border-radius: 10px;
+                            cursor: pointer;
+                            margin-bottom: 5vh;
+                            margin-top: 5vh;
+                        }
                     }
                 }
                 .viewContent::-webkit-scrollbar {
@@ -310,6 +345,12 @@
                 top: 0vh;
                 left: 0vh;
                 z-index: 7;
+
+                .close{
+                    background-color: transparent;
+                    color: white;
+                    border: none;
+                }
     
                 .viewContent{
                     height: 70vh;
@@ -323,6 +364,38 @@
                     overflow-y: scroll;
                     display: flex;
                     flex-direction: column;
+
+                    .Alert{
+                        p{
+                            width: 100%;
+                            text-align: center;
+                            font-size: 2.5vh;
+                        }
+                        img{
+                            width: 20%;
+                            margin-left: 40%;
+                            margin-top: 5%;
+                            margin-bottom: 5%;
+                        }
+                        .btns{
+                            width: 50%;
+                            margin-left: 23.2%;
+                            display: flex;
+                            button{
+                                background-color: #08A318;
+                                border: none;
+                                color: white;
+                                padding: 2.5%;
+                                font-size: 3vh;
+                                width:50%;
+                                margin-left: 5%;
+                                border-radius: 10px;
+                                cursor: pointer;
+                                margin-bottom: 5vh;
+                                margin-top: 5vh;
+                            }
+                        }
+                    }
     
                     .map{
                         width: 80%;
@@ -370,20 +443,23 @@
                         }
                     }
     
-                    .btn{
-                        background-color: #08A318;
-                        border: none;
-                        color: white;
-                        padding: 2%;
-                        font-size: 3vh;
-                        width:60%;
-                        margin-left: 20%;
-                        border-radius: 10px;
-                        cursor: pointer;
-                        margin-bottom: 5vh;
-                        margin-top: 5vh;
-    
-    
+                    .btns{
+                        width: 50%;
+                        margin-left: 23.2%;
+                        display: flex;
+                        button{
+                            background-color: #08A318;
+                            border: none;
+                            color: white;
+                            padding: 2.5%;
+                            font-size: 3vh;
+                            width:50%;
+                            margin-left: 5%;
+                            border-radius: 10px;
+                            cursor: pointer;
+                            margin-bottom: 5vh;
+                            margin-top: 5vh;
+                        }
                     }
                 }
                 .viewContent::-webkit-scrollbar {
