--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -4,22 +4,34 @@
         height: 100%;
         width: 100%;
         .n{
-            position: absolute;
-            height: 70vh;
-            top: 10vh;
-            padding: 2vw;
-            // background-color: black;
+            position: fixed;
             width: 90vw;
-            left:3vw;
-            overflow-y: scroll;
+            top: 16vh;
+            border-radius: 15px;
+            left: 5vw;
+            height: 80vh;
+            border: none;
             // background-color: black;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 
-            // .comments{
-            //     width: 85%;
-            //     margin-left: 5.5%;
-            //     // background-color: #08A318;
-            //     padding: 2%;
-            //     margin-top: 3%;
+            .disclaimer{
+                margin-top: 15vh;
+                width: 100%;
+                height: 40vh;
+
+                img{
+                    height: 40%;
+                    width: 40%;
+                    margin-left: 28%;
+                }
+                p{
+                    margin-top: 5%;
+                    width: 90%;
+                    margin-left: 5%;
+                    text-align: center;
+                    font-size: 1.5vh;
+                }
+            }
 
                 .notification{
                     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
@@ -141,14 +153,33 @@
             }
         }
         .n{
-            position: absolute;
-            height: 70vh;
-            top: 25vh;
-            padding: 5vh;
+            position: fixed;
+            width: 90vw;
+            top: 16vh;
+            border-radius: 15px;
+            left: 5vw;
+            height: 80vh;
+            border: none;
             // background-color: black;
-            width: 80vw;
-            left:10vw;
-            overflow-y: scroll;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+
+            .disclaimer{
+                margin-top: 15vh;
+                width: 100%;
+                height: 40vh;
+
+                img{
+                    height: 50%;
+                    width: 10%;
+                    margin-left: 42.5%;
+                }
+                p{
+                    margin-top: 5%;
+                    width: 40%;
+                    margin-left: 27.5%;
+                    text-align: center;
+                }
+            }
     
             .notification{
                 box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
