--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -29,6 +29,35 @@
     
                 display: flex;
                 flex-direction: column;
+
+                .Alert{
+                    p{
+                        width: 100%;
+                        text-align: center;
+                        font-size: 13px;
+                    }
+                    img{
+                        width: 50%;
+                        margin-left: 25%;
+                        margin-top: 20%;
+                        margin-bottom: 20%;
+                    }
+                    .btns{
+                        button{
+                            background-color: #08A318;
+                            border: none;
+                            color: white;
+                            padding: 4%;
+                            font-size: 3vh;
+                            width:40%;
+                            margin-left: 6.5%;
+                            border-radius: 10px;
+                            cursor: pointer;
+                            margin-bottom: 5vh;
+                            margin-top: 5vh;
+                        }
+                    }
+                }
                 
                 .suggestions{
                     position: absolute;
@@ -49,32 +78,51 @@
                     border: none;
                     cursor: pointer;
                 }
-    
+
                 input{
-                    padding: 1vh;
-                    margin: 2vh;
-                    border-style: solid;
-                    border-bottom-width: 2px;
-                    border-bottom: #08A318;
-                    border-top: none;
-                    border-left: none;
-                    border-right: none;
+                    box-shadow: inset #abacaf 0 0 0 2px;
+                    border: 0;
+                    background: rgba(0, 0, 0, 0);
+                    appearance: none;
+                    width: 90%;
+                    margin-left: 2.5%;
+                    position: relative;
+                    border-radius: 3px;
+                    padding: 9px 12px;
+                    line-height: 1.4;
+                    color: rgb(0, 0, 0);
+                    font-size: 16px;
+                    font-weight: 400;
+                    height: 40px;
+                    transition: all .2s ease;
+                
+                    margin-top: 3vh;
                 }
-                textarea{
-                    height: 10vh;
-                    margin: 2vh;
+                input:hover{
+                    box-shadow: 0 0 0 0 #fff inset, #1de9b6 0 0 0 2px;
                 }
-    
-                .submit{
-                    background-color: green;
-                    color: white;
-                    width: 60%;
-                    margin-left: 20%;
-                    padding: 2vh;
-                    border: none;
-                    border-radius: 10px;
-                    cursor: pointer;
+                input:focus{
+                    background: #fff;
+                    outline: 0;
+                    box-shadow: 0 0 0 0 #fff inset, #1de9b6 0 0 0 3px;
                 }
+                
+                .btns{
+                    button{
+                        background-color: #08A318;
+                        border: none;
+                        color: white;
+                        padding: 4%;
+                        font-size: 3vh;
+                        width:40%;
+                        margin-left: 6.5%;
+                        border-radius: 10px;
+                        cursor: pointer;
+                        margin-bottom: 5vh;
+                        margin-top: 5vh;
+                    }
+                }
+
                 
             }
         }
@@ -94,25 +142,68 @@
                     border-radius: 15px;
                     margin-left: 22.5%;
                 }
-                p{
-                    width: 100%;
-                    text-align: center;
+                .details{
+                    p{
+                        width: 100%;
+                        text-align: center;
+                        font-size: 12px;
+                        margin-top: -2vh;
+                    }
+                    .name{
+                        font-size: 25px;
+                        margin-top: 2vh;
+                    }
                 }
             }
     
-            .Add{
+            .Add {
+
                 position: absolute;
-                left: 9.5vw;
-                width: 81vw;
+                left: 32vw;
+                width: 60vw;
                 background-color: green;
-                border: none;
-                border-radius: 15px;
-                padding: 2vh;
-                color: aliceblue;
                 top:48vh;
                 cursor: pointer;
+
+                background-color: #FFFFFF;
+                border: 1px solid green;
+                border-radius: 8px;
+                box-sizing: border-box;
+                color: #222222;
+                cursor: pointer;
+                font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+                font-size: 16px;
+                font-weight: 600;
+                line-height: 20px;
+                margin: 0;
+                outline: none;
+                padding: 13px 23px;
+                text-decoration: none;
+                touch-action: manipulation;
+                transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
+                user-select: none;
+                -webkit-user-select: none;
+                width: auto;
             }
-    
+
+            .Add:focus-visible {
+            box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
+            transition: box-shadow .2s;
+            }
+
+            .Add:active {
+            background-color: #F7F7F7;
+            border-color: #000000;
+            transform: scale(.96);
+            }
+
+            .Add:disabled {
+            border-color: #DDDDDD;
+            color: #DDDDDD;
+            cursor: not-allowed;
+            opacity: 1;
+            }
+
             .map{
                 width: 80vw;
                 height: 30vh;
@@ -248,6 +339,26 @@
                 background-color: transparent;
                 width: 100%;
                 overflow-y: scroll;
+                
+                .disclaimer{
+                    margin-top: 15vh;
+                    width: 100%;
+                    height: 40vh;
+
+                    img{
+                        height: 40%;
+                        width: 40%;
+                        margin-left: 28%;
+                    }
+                    p{
+                        margin-top: 5%;
+                        width: 90%;
+                        margin-left: 5%;
+                        text-align: center;
+                        font-size: 1.5vh;
+                    }
+                }
+
                 .comments{
                     width: 85%;
                     margin-left: 5.5%;
@@ -624,16 +735,50 @@
                 display: flex;
                 flex-direction: column;
 
+                
+                .Alert{
+                    p{
+                        width: 100%;
+                        text-align: center;
+                        font-size: 2.5vh;
+                    }
+                    img{
+                        width: 20%;
+                        margin-left: 40%;
+                        margin-top: 5%;
+                        margin-bottom: 5%;
+                    }
+                    .btns{
+                        width: 50%;
+                        margin-left: 23.2%;
+                        display: flex;
+                        button{
+                            background-color: #08A318;
+                            border: none;
+                            color: white;
+                            padding: 2.5%;
+                            font-size: 3vh;
+                            width:50%;
+                            margin-left: 5%;
+                            border-radius: 10px;
+                            cursor: pointer;
+                            margin-bottom: 5vh;
+                            margin-top: 5vh;
+                        }
+                    }
+                }
+
                 .suggestions{
                     // position: absolute;
                     z-index: 8;
-                    min-height:8%;
+                    min-height:15%;
                     max-height: 25%;
                     width: 90%;
                     margin-left: 3%;
                     overflow-y: scroll;
                     background-color: aliceblue;
                     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+                    position: absolute;
 
 
                     p{
@@ -648,8 +793,9 @@
                         padding:1%;
                     }
                 }
+                
     
-    
+                    
                 .cancel{
                     position: absolute;
                     left: 59vw;
@@ -659,29 +805,50 @@
                 }
     
                 input{
-                    padding: 1vh;
-                    margin: 2vh;
-                    border-style: solid;
-                    border-bottom-width: 2px;
-                    border-bottom: #08A318;
-                    border-top: none;
-                    border-left: none;
-                    border-right: none;
+                    box-shadow: inset #abacaf 0 0 0 2px;
+                    border: 0;
+                    background: rgba(0, 0, 0, 0);
+                    appearance: none;
+                    width: 90%;
+                    margin-left: 2.5%;
+                    position: relative;
+                    border-radius: 3px;
+                    padding: 9px 12px;
+                    line-height: 1.4;
+                    color: rgb(0, 0, 0);
+                    font-size: 16px;
+                    font-weight: 400;
+                    height: 40px;
+                    transition: all .2s ease;
+                
+                    margin-top: 3vh;
                 }
-                textarea{
-                    height: 10vh;
-                    margin: 2vh;
+                input:hover{
+                    box-shadow: 0 0 0 0 #fff inset, #1de9b6 0 0 0 2px;
                 }
-    
-                .submit{
-                    background-color: green;
-                    color: white;
-                    width: 30%;
-                    margin-left: 35%;
-                    padding: 2vh;
-                    border: none;
-                    border-radius: 10px;
-                    cursor: pointer;
+                input:focus{
+                    background: #fff;
+                    outline: 0;
+                    box-shadow: 0 0 0 0 #fff inset, #1de9b6 0 0 0 3px;
+                }
+
+                .btns{
+                    width: 50%;
+                    margin-left: 23.2%;
+                    display: flex;
+                    button{
+                        background-color: #08A318;
+                        border: none;
+                        color: white;
+                        padding: 2.5%;
+                        font-size: 3vh;
+                        width:50%;
+                        margin-left: 5%;
+                        border-radius: 10px;
+                        cursor: pointer;
+                        margin-bottom: 5vh;
+                        margin-top: 5vh;
+                    }
                 }
                 
             }
@@ -689,41 +856,85 @@
     
         .topBar{
             .info{
-                width: 20vw;
+                width: 60vw;
                 min-height: 40vh;
                 height: max-content;
-                margin-left: 40vw;
+                margin-left: 10vw;
+                display: flex;
                 // background-color: #08A318;
+                margin-top: 10vh;
     
                 .profilePic{
-                    width: 55%;
+                    width: 18%;
                     height: 90%;
                     border-radius: 15px;
-                    margin-left: 22.5%;
                 }
-                p{
+                .details{
                     width: 100%;
-                    text-align: center;
-                }
-                .name{
-                    font-size: 4vh;
-
+                    margin-top: -0.5vh;
+                    p{
+                        width: 100%;
+                        padding-left: 4vw;
+                        margin-top: -4vh;
+                    }
+                    .name{
+                        font-size: 6vh;
+                        margin-top: 6vh;
+                    }
                 }
             }
-    
-            .Add{
+            
+            .Add {
+
                 position: absolute;
                 left: 75%;
                 width: 10vw;
                 background-color: green;
                 border: none;
-                border-radius: 15px;
                 padding: 2vh;
-                color: aliceblue;
                 top:32vh;
                 cursor: pointer;
+
+                background-color: #FFFFFF;
+                border: 1px solid green;
+                border-radius: 8px;
+                box-sizing: border-box;
+                color: #222222;
+                cursor: pointer;
+                display: inline-block;
+                font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+                font-size: 16px;
+                font-weight: 600;
+                line-height: 20px;
+                margin: 0;
+                outline: none;
+                padding: 13px 23px;
+                text-decoration: none;
+                touch-action: manipulation;
+                transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
+                user-select: none;
+                -webkit-user-select: none;
+                width: auto;
             }
-    
+
+            .Add:focus-visible {
+            box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
+            transition: box-shadow .2s;
+            }
+
+            .Add:active {
+            background-color: #F7F7F7;
+            border-color: #000000;
+            transform: scale(.96);
+            }
+
+            .Add:disabled {
+            border-color: #DDDDDD;
+            color: #DDDDDD;
+            cursor: not-allowed;
+            opacity: 1;
+            }
+
             .map{
                 width: 80vw;
                 height: 45vh;
@@ -736,7 +947,7 @@
     
         .main{
             width: 90vw;
-            margin-top: 15vh;
+            margin-top: 5vh;
             border-radius: 15px;
             margin-left: 5vw;
             height: 80vh;
@@ -751,6 +962,24 @@
                 // background-color: black;
                 width: 100%;
                 overflow-y: scroll;
+
+                .disclaimer{
+                    margin-top: 15vh;
+                    width: 100%;
+                    height: 40vh;
+
+                    img{
+                        height: 50%;
+                        width: 10%;
+                        margin-left: 42%;
+                    }
+                    p{
+                        margin-top: 5%;
+                        width: 40%;
+                        margin-left: 27%;
+                        text-align: center;
+                    }
+                }
     
                .ll {
                     height: max-content;
