--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -40,49 +40,26 @@
                     padding: 1%;
                     margin-top: 2vh;
                     display: flex;
+                    width: 90%;
+                    margin-left: 4%;
 
-                    .userInfo{
-                        padding: 2%;
-                        width: 20%;
-                        .name{
-                            height: 2vh;
-                            margin-top: -0.8vh;
-                            margin-bottom: 1vh;
-                            width: 90%;
-                            margin-left: 5%;
-                            text-align: center;
-                            font-size: 1.3vh;
-                        }
-                        img{
-                            height: 6vh;
-                            border-radius: 10px;
-                            margin-left: 5%;
-                            margin-top: 0vh;
-                            width: 90%;
-                        }
+                    .info{
+                        font-size: 8px;
+                        margin-left: 4vw;
+                        margin-top: 7%;
                     }
-                    .price{
-                        margin-left: 5%;
-                        background-color: #08A318;
-                        border-radius: 10px;
-                        text-align: center;
-                        padding-top: 2%;
+                    img{
                         height: 70%;
-                        width: 30%;
-                        color: white;
-                        font-size: 15px;
-                        margin-top: 10px;
-                        padding: 2%;
-                        height: 60%;
                         margin-top: 4%;
-
-
+                        margin-left: 2%;
                     }
+
                     .btns{
                         width: 35%;
                         height: 100%;
                         margin-left: 5%;
                         display: flex;
+                        flex-direction: column;
                         margin-top: 2.5%;
 
                         img{
@@ -91,6 +68,21 @@
                             margin-top: 5%;
                             cursor: pointer;
                         }
+
+                        button{
+                            background-color: #08A318;
+                            border: none;
+                            color: white;
+                            padding: 2%;
+                            font-size: 15px;
+                            width:100%;
+                            margin-left: -7%;
+                            border-radius: 5px;
+                            margin-top: 5%;
+                            height: 35%;
+                            cursor: pointer;
+                        }
+                        
                     }
 
                 }
@@ -189,26 +181,14 @@
                 margin-top: 2vh;
                 display: flex;
                 width: 90%;
-        
-                .userInfo{
-                    padding: 2%;
-                    width: 6%;
-                    .name{
-                        height: 2vh;
-                        margin-top: -2.5vh;
-                        margin-bottom: 1vh;
-                        width: 90%;
-                        margin-left: 5%;
-                        text-align: center;
-                        font-size: 1.3vh;
-                    }
-                    img{
-                        height: 6vh;
-                        border-radius: 10px;
-                        margin-left: 5%;
-                        margin-top: 0vh;
-                        width: 90%;
-                    }
+                margin-left: 4%;
+                .info{
+                    margin-left: 5vw;
+                    width: 60%;
+                    font-size: 2.5vh;
+                }
+                img{
+                    margin-left: 2vw;
                 }
                 .price{
                     margin-left: 20%;
@@ -224,12 +204,24 @@
                 .btns{
                     width: 15%;
                     height: 100%;
-                    margin-left: 35%;
+                    margin-left: 5%;
+                    display: flex;
         
                     img{
                         width: 45%;
                         height: 80%;
                         margin-top: 5%;
+                        cursor: pointer;
+                    }
+                    button{
+                        background-color: #08A318;
+                        border: none;
+                        color: white;
+                        padding: 1.5%;
+                        font-size: 3vh;
+                        width:50%;
+                        margin-left: 5%;
+                        border-radius: 10px;
                         cursor: pointer;
                     }
                 }
